Fixed box overlap. (#29)

--- a/layout/static/css/chevah.css
+++ b/layout/static/css/chevah.css
@@ -340,7 +340,8 @@ pre {
   margin-right: 5px;
   -webkit-box-shadow: 2px 2px 2px 0px #d4d4d4;
   -moz-box-shadow: 2px 2px 2px 0px #d4d4d4;
-  box-shadow: 2px 2px 2px 0px #d4d4d4; }
+  box-shadow: 2px 2px 2px 0px #d4d4d4; 
+  display: -webkit-box;}
 
 code {
   font-size: 1em;
